bingo/style_bingo.css
@import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300&display=swap');

:root{
  --bg-color: #0D1F2D;
  --text-color: #546A7B;
}

body {
  padding: 20px;
  margin: 50px;
  font-family: 'Radio Canada', sans-serif;
  background-color: var(--bg-color);
  color: var(--text-color);
}

/* Containers */
.site-container{
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: column;
}

.bingo-card-container {
  display: flex;
  align-self: center;
  min-width: 30%;
  max-width: 20%;
  border: 2px dotted rgb(96, 139, 168);
}

.task-info-container {
  display: flex;
  align-self: center;
  border: 2px dotted rgb(96, 139, 168);
}

 
/* Bingo Card Table */
table 
{
  table-layout: fixed;
  width: 100%;
}

th {
  padding: 2rem;
  font-size: larger;
}

tbody td {
  text-align: center;
  padding: 1rem;
}

tbody td:hover {
  transition: .2s;
  transform: scale(110%);
}

tbody td img {
  width: 200;
  height: 200;
}

